# sanguosha

./: .dockerignore  .gitignore  Dockerfile  card-check  card-v2  current-screen  docker-compose.yml  game-screen  index.html  package-lock.json  package.json  railway.toml  start-game-button  start-online.bat  tsconfig.app.json  vite.config.online.ts  vite.config.ts
scripts/: add-portrait-urls.mjs  crop-portraits.mjs  download-all-fandom.mjs  download-fandom.mjs  download-portraits.mjs  retry-portraits.mjs  search-portraits.mjs  test-portraits.mjs
server/: GameRunner.ts  RoomManager.ts  StateMasker.ts  copy-dist.cjs  index.ts  package-lock.json  package.json  test_tunnel.mjs  tsconfig.build.json  tsconfig.json
server-cpp/: CMakeLists.txt  Dockerfile
server-cpp/src/: action_resolver.hpp  ai.hpp  characters.hpp  deck.hpp  distance.hpp  game_state.hpp  identity.hpp  json_serializer.hpp  main.cpp  rules_engine.hpp  skills.hpp  types.hpp
server/server/public/: server.js
src/: App.tsx
src/components/actions/: ActionBar.tsx
src/components/cards/: CardFace.tsx  CardPile.tsx
src/components/layout/: PhaseBanner.tsx
src/components/log/: GameLog.tsx
src/data/: cardDefinitions.ts  characterDefinitions.ts  index.ts
src/debug/: DebugPanel.tsx  debugApi.ts  index.ts  testAll.ts
src/engine/: index.ts
src/hooks/: useAIThink.ts  useHotSeat.ts  useTurnTimer.ts
src/network/: NetworkClient.ts
src/store/: GameContext.tsx  gameReducer.ts
src/styles/: global.css
src/types/: actions.ts  cards.ts  characters.ts  events.ts  game.ts  index.ts
(+43 files in other folders)
